@@ -653,10 +653,13 @@ module ActiveRecord
       
       def change_column(table_name, column_name, type, options = {})
         sql_commands = []
-        remove_default_constraint(table_name, column_name)
+        column_object = columns(table_name).detect { |c| c.name.to_s == column_name.to_s }
         change_column_sql = "ALTER TABLE #{quote_table_name(table_name)} ALTER COLUMN #{quote_column_name(column_name)} #{type_to_sql(type, options[:limit], options[:precision], options[:scale])}"
         change_column_sql << " NOT NULL" if options[:null] == false
         sql_commands << change_column_sql
+        if options_include_default?(options) || (column_object && column_object.type != type.to_sym)
+         	remove_default_constraint(table_name,column_name)
+        end
         if options_include_default?(options)
           remove_sqlserver_columns_cache_for(table_name)
           sql_commands << "ALTER TABLE #{quote_table_name(table_name)} ADD CONSTRAINT #{default_name(table_name,column_name)} DEFAULT #{quote(options[:default])} FOR #{quote_column_name(column_name)}"
